Updates to Homework Week 4

--- a/about.html
+++ b/about.html
@@ -54,33 +54,34 @@
     <h3>Front-end developer from Aachen, Germany</h3>
     <div class="about-paragraphs">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
+        I'm passionate about Tech, Travel, Trade and Think.
+These are mine 4 Ts.
+I have experience in travel and hospitality companies, also in sales, operational support, B2B, events and people lead.
+My goals is to have good results using creativity with attention in details to bring innovative and efficient solutions.
+I'm looking for a company with a brilliant product or service where I can be challenged and also build a career.
       </p>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="images/yoga.png"
+            src="images/kateriny.png.png"
             class="img-fluid p-2 shadow rounded"
-            alt="Yoga Project"
+            alt="Kateriny Guedes"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/weather.png"
+            src="images/weather.png.png"
             class="img-fluid p-2 shadow rounded"
             alt="Weather Project"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/yogurt.png"
+            src="images/dictionary.png.png"
             class="img-fluid p-2 shadow rounded"
-            alt="Yogurt Project"
+            alt="Word Universe"
           />
         </div>
       </div>
@@ -91,6 +92,10 @@
       <a href="mailto:evannyguedes@gmail.com" class="email-link">
         evannyguedes@gmail.com
       </a>
+      <div class="text-center">
+      <img src="images/perfil.png" class="img-fluid w-25 p-2" alt="Profile" />
+    </div>
+        </div>
     </div>
   </body>
 </html>
