--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
         </div>
       </div>
     </nav>
-    <h2>👋 Hi I am</h2>
-    <h1>Évanny Guedes</h1>
-    <h3>🇧🇷 Front-end developer, based in Germany</h3>
+
+    <div class="text-center">
+    <img src="images/evanny.png.png" class="img-fluid rounded center" alt="Evanny" />
+    </div>
     <div class="navigation-links">
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
@@ -60,52 +61,49 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" alt="Yoga Project" />
+          <img src="images/kateriny.png.png" class="img-fluid rounded" alt="Kateriny Guedes" />
         </div>
         <div class="col-md-6">
-          <h2 class="mb-3">Yoga app</h2>
+          <h2 class="mb-3">Kateriny Guedes Page</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            This was my first project that I made during the Basic Workshop from SheCodes.
+            I wanted to do something that could comunicate my sister clothe brand.
+            Even with such basic knowlegdment, the page was beautiful, functional and light.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-68-0/projects/370423" class="primary-link">Check Kateriny Guedes Page</a>
           </div>
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <h2 class="mb-3">Weather app</h2>
+          <h2 class="mb-3">Good Vibes Weather app</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            First I built this as my final project from SheCodes Plus, and then I improved during SheCodes React.
+            This Weather App was based in the idea to have a really nice interact app that can cherry you up when you are trying to check the weather, because something could be a little frustrered to.
+
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link"> Launch Weather App </a>
+            <a href="https://stupefied-beaver-5af031.netlify.app/" class="primary-link"> Check Weather App </a>
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" alt="Weather Project" />
+          <img src="images/weather.png.png" class="img-fluid rounded" alt="Weather Project" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" alt="Yogurt Project"/>
+          <img src="images/dictionary.png.png" class="img-fluid rounded" alt="Word Universe"/>
         </div>
         <div class="col-md-6">
-          <h2 class="mb-3">Yogurt app</h2>
+          <h2 class="mb-3">Word Universe (dictionary app)</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            This was the coolest project one. I had everythinh in my mind how I wish to be, and I made it.
+            It is interective, cool and smart.
+            This was my final project from the React Workshop.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link"> Launch Yogurt App</a>
+            <a href="https://reverent-lalande-dd480e.netlify.app/" class="primary-link">Check Word Universe</a>
           </div>
         </div>
       </div>
